# Telemetry-System

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyrightconfig.json
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  router.py
backend/app/api/routes/: __init__.py  health.py  recording.py  runs.py  websocket.py
backend/app/core/: config.py  dependencies.py  state.py
backend/app/db/: __init__.py  models.py  repository.py  session.py
backend/app/schemas/: __init__.py  api.py  telemetry.py
backend/app/services/: recorder.py
backend/app/services/simulator/: __init__.py  engine.py  phases.py  state.py
backend/app/services/storage/: __init__.py  base.py  local.py  s3.py
backend/app/services/telemetry/: __init__.py  manager.py  replay.py  ws_hub.py
backend/app/utils/: math.py  run_id.py
backend/tests/: conftest.py  test_api.py  test_imports.py  test_recorder.py  test_simulator.py
dbc/: fs_ev_example.dbc
frontend/: .dockerignore  .env.example  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: index.css  main.tsx  vite-env.d.ts
frontend/src/app/: App.tsx
frontend/src/components/: AlertPanel.tsx  ChartPanel.tsx  GaugeBar.tsx  MetricCard.tsx  SafetyMatrix.tsx  SignalTable.tsx  StatusBadge.tsx  ThemeToggle.tsx
frontend/src/components/layout/: ChartGrid.tsx  DashboardHeader.tsx  MetricGrid.tsx  SectionHeader.tsx
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  progress.tsx  scroll-area.tsx  select.tsx  table.tsx  (+1 more)
frontend/src/hooks/: useTelemetry.ts  useTheme.ts
frontend/src/lib/: api.ts  config.ts  status.ts  telemetry.ts  theme.ts  types.ts
tools/: dbc_lint.py
(+13 files in other folders)
